bitfield/tests/04-multiple-of-8bits.stderr
error[E0080]: evaluation panicked: expected struct size to be a multiple of 8 bits
  --> tests/04-multiple-of-8bits.rs:54:12
   |
54 | pub struct NotQuiteFourBytes {
   |            ^^^^^^^^^^^^^^^^^ evaluation of `size_of_NotQuiteFourBytes_is_multiple_of_8_bits` failed here
